<resources>
    <string name="app_name">majika</string>
    <string name="navbar_twibbon">Twibbon</string>
    <string name="navbar_location">Location</string>
    <string name="navbar_food_bank">Food Bank</string>
    <string name="navbar_shopping_cart">Shopping Cart</string>
    <string name="maps">Maps</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="jumlah">Jumlah</string>
    <string name="total_harga">Total Harga</string>
    <string name="checkout">Checkout</string>
    <string name="menu">Menu</string>
    <string name="location">Cabang Restoran</string>
    <string name="cart">Cart</string>
    <string name="twibbon">Twibbon</string>
    <string name="reset">Reset</string>
    <string name="payment_fragment">payment_fragment</string>
    <string name="capture">Capture</string>
    <string name="search_menu">Search Menu</string>
    <string name="default_temperature">20°C</string>
</resources>