<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_food_bank">

    <fragment
        android:id="@+id/navigation_food_bank"
        android:name="com.example.majika.ui.foodBank.FoodBankFragment"
        android:label="@string/navbar_food_bank"
        tools:layout="@layout/fragment_food_bank" />

    <fragment
        android:id="@+id/navigation_location"
        android:name="com.example.majika.ui.location.LocationFragment"
        android:label="@string/navbar_location"
        tools:layout="@layout/fragment_food_bank" />

    <fragment
        android:id="@+id/navigation_shopping_cart"
        android:name="com.example.majika.ui.shoppingCart.ShoppingCartFragment"
        android:label="@string/navbar_shopping_cart"
        tools:layout="@layout/fragment_food_bank" />
    <fragment
        android:id="@+id/navigation_twibbon"
        android:name="com.example.majika.ui.twibbon.TwibbonFragment"
        android:label="@string/navbar_twibbon"
        tools:layout="@layout/fragment_food_bank" />
</navigation>