<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/navbar_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/shimmer">

    <ImageView
        android:id="@+id/navigation_twibbon"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:contentDescription="@string/navbar_twibbon"
        android:src="@drawable/baseline_camera_alt_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <!--    <TextView-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:textColor="@color/black"-->
    <!--        android:text="@string/navbar_twibbon"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.162"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/navigation_twibbon"/>-->


    <ImageView
        android:id="@+id/navigation_location"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:contentDescription="@string/navbar_location"
        android:src="@drawable/baseline_location_on_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.234"
        app:layout_constraintStart_toEndOf="@+id/navigation_twibbon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/navigation_food_bank"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:contentDescription="@string/navbar_food_bank"
        android:src="@drawable/baseline_food_bank_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.366"
        app:layout_constraintStart_toEndOf="@+id/navigation_location"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/navigation_shopping_cart"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:contentDescription="@string/navbar_shopping_cart"
        android:src="@drawable/baseline_shopping_cart_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.629"
        app:layout_constraintStart_toEndOf="@+id/navigation_food_bank"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>