<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">
    <androidx.cardview.widget.CardView
        android:id="@+id/cart_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:cardBackgroundColor="@color/red"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="12dp">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/menu_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">
                <TextView
                    android:id="@+id/cart_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/inter"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Cart Name" />
                <TextView
                    android:id="@+id/cart_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/inter"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cart_name"
                    tools:text="Rp. 50.000" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@+id/cart_price">
                    <TextView
                        android:id="@+id/total_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="0dp"
                        android:layout_weight="1"
                        android:text="Jumlah" />
                    <Button
                        android:id="@+id/minus_cart_button"
                        android:backgroundTint="@color/shimmer"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginStart="120dp"
                        android:text="@string/minus"
                        android:textColor="@color/red"/>
                    <TextView
                        android:id="@+id/item_quantity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:textAlignment="center"
                        android:text="2" />
                    <Button
                        android:id="@+id/plus_cart_button"
                        android:backgroundTint="@color/shimmer"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:text="@string/plus"
                        android:textColor="@color/red"/>
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>